Añadida seguridad al registro

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -125,7 +125,8 @@
     </div>
 
     <script>
-        const API_URL = "http://127.0.0.1:8000";
+        //const API_URL = "http://127.0.0.1:8000";
+        const API_URL = "https://gestortareas-test.onrender.com";
         let token = localStorage.getItem("token_accesible");
 
         // Variables para controlar la edición
