Arreglo en html nueva URI

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -182,7 +182,7 @@
 
         const API_URL = esLocal
             ? "http://127.0.0.1:8000"                  // Backend Local
-            : "https://gestortareas-test.onrender.com"; // Backend Nube (Render)
+            : "https://gestortareas-ws.onrender.com"; // Backend Nube (Render)
 
         console.log("Conectando a:", API_URL); // Para que veas en la consola (F12) cuál eligió
 
